@@ -2070,3 +2070,4 @@ seen. gmtime warning still there
 - Added some information to the docs listing the file names for motd, rules, etc. (#0000519)
   suggested a LONG time ago by Jaw959
 - Fixed a compile error with openssl enabled at redhat 9.
+- Added some temporarely SQLINE debugging/trace code
